@@ -1,7 +1,6 @@
 package org.molgenis.vcf.inheritance.matcher.checker;
 
-import static java.util.Collections.emptyList;
-import static java.util.Collections.emptySet;
+import static java.util.Collections.*;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.mock;
 import static org.molgenis.vcf.inheritance.matcher.model.MatchEnum.FALSE;
@@ -15,7 +14,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.api.Test;
@@ -23,10 +21,9 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
-import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.molgenis.vcf.inheritance.matcher.VcfRecord;
-import org.molgenis.vcf.inheritance.matcher.VepMetadata;
+import org.molgenis.vcf.inheritance.matcher.VariantGeneRecord;
+import org.molgenis.vcf.inheritance.matcher.model.GeneInfo;
 import org.molgenis.vcf.inheritance.matcher.model.MatchEnum;
 import org.molgenis.vcf.inheritance.matcher.util.VariantContextTestUtil;
 import org.molgenis.vcf.utils.sample.model.AffectedStatus;
@@ -38,28 +35,25 @@ import org.springframework.util.ResourceUtils;
 class AdNonPenCheckerTest {
   private final AdNonPenetranceChecker adNonPenetranceChecker = new AdNonPenetranceChecker();
 
-  @Mock
-  VepMetadata vepMetadata;
-
   @ParameterizedTest(name = "{index} {3}")
   @MethodSource("provideTestCases")
-  void check(VcfRecord vcfRecord, Pedigree family, String expectedString,
+  void check(VariantGeneRecord variantGeneRecord, Pedigree family, String expectedString,
              String displayName) {
     MatchEnum expected = mapExpectedString(expectedString);
-    assertEquals(expected, adNonPenetranceChecker.check(vcfRecord, family, FALSE));
+    assertEquals(expected, adNonPenetranceChecker.check(variantGeneRecord, family));
   }
 
   @Test
   void testCheckAd() {
     VariantContext variantContext = mock(VariantContext.class);
     Pedigree family = mock(Pedigree.class);
-    assertEquals(FALSE, adNonPenetranceChecker.check(new VcfRecord(variantContext, vepMetadata, emptySet()), family, MatchEnum.TRUE));
+    assertEquals(FALSE, adNonPenetranceChecker.check(new VariantGeneRecord(variantContext, emptySet(), new GeneInfo("TEST", "SOURCE", emptySet())), family));
   }
 
   private static Stream<Arguments> provideTestCases() throws IOException {
     File testFile = ResourceUtils.getFile("classpath:ADNonPenTests.tsv");
     List<String[]> lines = Files.lines(testFile.toPath())
-        .map(line -> line.split("\t")).collect(Collectors.toList());
+        .map(line -> line.split("\t")).toList();
 
     return lines.stream().skip(1).map(line -> {
       String testName = line[0];
@@ -90,8 +84,7 @@ class AdNonPenCheckerTest {
         genotypes.add(createGenotype("Brother", brotherGt));
       }
       return Arguments.of(VariantContextTestUtil
-          .createVariantContext(genotypes,
-                  new VepMetadata("CSQ",-1,-1,-1,-1,-1),""), family, expected, testName);
+          .createVariantContext(genotypes,""), family, expected, testName);
 
     });
   }
