@@ -4,19 +4,19 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.molgenis.vcf.inheritance.matcher.util.VariantContextTestUtil.createGenotype;
 import static org.molgenis.vcf.inheritance.matcher.util.VariantContextTestUtil.mapExpectedString;
 
-import htsjdk.variant.variantcontext.VariantContext;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 import java.util.stream.Stream;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
-import org.molgenis.vcf.inheritance.matcher.VcfRecord;
-import org.molgenis.vcf.inheritance.matcher.VepMetadata;
+import org.molgenis.vcf.inheritance.matcher.VariantGeneRecord;
+import org.molgenis.vcf.inheritance.matcher.VariantRecord;
+import org.molgenis.vcf.inheritance.matcher.model.InheritanceResult;
 import org.molgenis.vcf.inheritance.matcher.model.MatchEnum;
 import org.molgenis.vcf.inheritance.matcher.util.VariantContextTestUtil;
 import org.molgenis.vcf.utils.sample.model.AffectedStatus;
@@ -30,17 +30,17 @@ class DeNovoCheckerTest {
 
     @ParameterizedTest(name = "{index} {3}")
     @MethodSource("provideTestCases")
-    void check(VcfRecord vcfRecord, Pedigree family, String expectedString,
+    void check(VariantRecord variantRecord, Pedigree family, String expectedString,
                String displayName) {
         MatchEnum expected = mapExpectedString(expectedString);
         Sample individual = family.getMembers().get("Patient");
-        assertEquals(expected, deNovoChecker.checkDeNovo(vcfRecord, individual));
+        assertEquals(expected, deNovoChecker.checkDeNovo(variantRecord, individual));
     }
 
   private static Stream<Arguments> provideTestCases() throws IOException {
     File testFile = ResourceUtils.getFile("classpath:DenovoTests.tsv");
     List<String[]> lines = Files.lines(testFile.toPath())
-        .map(line -> line.split("\t")).collect(Collectors.toList());
+        .map(line -> line.split("\t")).toList();
 
     return lines.stream().skip(1).map(line -> {
       String testName = line[0];
@@ -54,11 +54,12 @@ class DeNovoCheckerTest {
       Pedigree family = PedigreeTestUtil
           .createFamily(probandSex, AffectedStatus.MISSING, AffectedStatus.MISSING,
               AffectedStatus.MISSING, "FAM001");
-      return Arguments.of(VariantContextTestUtil
-          .createVariantContext(Arrays.asList(createGenotype("Patient", probandGt),
-              createGenotype("Father", fatherGt),
-              createGenotype("Mother", motherGt)),
-                  new VepMetadata("CSQ",-1,-1,-1,-1,-1), "", chrom), family, expected, testName);
+        VariantGeneRecord record = VariantContextTestUtil
+                .createVariantContext(Arrays.asList(createGenotype("Patient", probandGt),
+                                createGenotype("Father", fatherGt),
+                                createGenotype("Mother", motherGt)), "", chrom);
+
+      return Arguments.of(new VariantRecord(Map.of(record.getGeneInfo(), record), record.unwrap(),InheritanceResult.builder().build()), family, expected, testName);
 
     });
   }
