@@ -1,14 +1,12 @@
 package org.molgenis.vcf.inheritance.matcher.checker;
 
 import htsjdk.variant.variantcontext.Genotype;
-import htsjdk.variant.variantcontext.VariantContext;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.molgenis.vcf.inheritance.matcher.VcfRecord;
-import org.molgenis.vcf.inheritance.matcher.VepMetadata;
+import org.molgenis.vcf.inheritance.matcher.VariantGeneRecord;
 import org.molgenis.vcf.inheritance.matcher.model.MatchEnum;
 import org.molgenis.vcf.inheritance.matcher.util.VariantContextTestUtil;
 import org.molgenis.vcf.utils.sample.model.AffectedStatus;
@@ -21,7 +19,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -35,16 +32,16 @@ class MtCheckerTest {
 
     @ParameterizedTest(name = "{index} {3}")
     @MethodSource("provideTestCases")
-    void check(VcfRecord vcfRecord, Pedigree family, String expectedString,
+    void check(VariantGeneRecord variantGeneRecord, Pedigree family, String expectedString,
                String displayName) {
         MatchEnum expected = mapExpectedString(expectedString);
-        assertEquals(expected, mtChecker.check(vcfRecord, family));
+        assertEquals(expected, mtChecker.check(variantGeneRecord, family));
     }
 
     private static Stream<Arguments> provideTestCases() throws IOException {
         File testFile = ResourceUtils.getFile("classpath:MTtests.tsv");
         List<String[]> lines = Files.lines(testFile.toPath())
-                .map(line -> line.split("\t")).collect(Collectors.toList());
+                .map(line -> line.split("\t")).toList();
 
         return lines.stream().skip(1).map(line -> {
             String testName = line[0];
@@ -75,8 +72,7 @@ class MtCheckerTest {
                 genotypes.add(createGenotype("Brother", brotherGt));
             }
             return Arguments.of(VariantContextTestUtil
-                    .createVariantContext(genotypes,
-                            new VepMetadata("CSQ",-1,-1,-1,-1,-1),"", "chrM"), family, expected, testName);
+                    .createVariantContext(genotypes,"", "chrM"), family, expected, testName);
 
         });
     }
